...
 */
function PlaceAutocompleteFallback(props: PlaceAutocompleteInputProps & { onActivate?: () => void }) {
  const {
    value,
    onChange,
    onClear,
    label = 'Location',
    placeholder = 'Enter your location...',
    isRequired = false,
    errorMessage,
    isInvalid,
    classNames,
    className,
...
